# statsNeuro2025

./: .buildinfo  .gitignore  README.md  checkSpelling.csh  genindex.html  index.html  objects.inv  repo.dic  search.html  searchindex.js  setup.cfg  sg_execution_times.html
.doctrees/: environment.pickle  index.doctree  sg_execution_times.doctree
.doctrees/auto_examples/: index.doctree  sg_execution_times.doctree
.github/workflows/: docs.yml
_downloads/02dcf809789ea0a03aae0d42168eacb8/: plot_signalPlusNoise.py
_downloads/200faec71f624512cf4a837ae934e4ec/: plot_autoregressiveExample.py
_downloads/245726e6941226a690d15604f82ebfca/: plot_autoregressiveExample.ipynb
_downloads/3cc375a6cf86ba66a6a884532333575d/: plot_movingAverageExample.py
_downloads/54f786220c63b11d647c5cbec96b9e58/: plot_movingAverageExample.ipynb
_downloads/9587cdef06164702ce2a1ace1143e6ea/: plot_randomWalkWithDriftExample.ipynb
_downloads/98653efe5c1834556976c10f980dbc19/: plot_whiteNoiseExample.ipynb
_downloads/a8cb23f559c010077566c452fdc4df70/: plot_signalPlusNoise.ipynb
_sources/: index.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt
auto_examples/: index.html  sg_execution_times.html
auto_examples/01_temporalTimeSeriesAnalysis/: index.html  plot_autoregressiveExample.html  plot_movingAverageExample.html  plot_randomWalkWithDriftExample.html  plot_signalPlusNoise.html  plot_whiteNoiseExample.html  sg_execution_times.html
code/scripts/: doPlotAutocorrelation.py  doPlotAutocovariance.py  doPlotData.py  (+2 more)
examples/: GALLERY_HEADER.rst
(+28 files in other folders)
