[metadata]
name = statsNeuro2025
version = 1.0.0
description = Repository for Statistical Neuroscience 2025
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joacorapela/joacorapela_common
author = Joaquin Rapela
author_email = joacorapela@gmail.com
license = MIT
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7

[options]
package_dir = 
     = code
packages = find:
install_requires = 
    numpy
    plotly
    kaleido
    sphinx
    sphinx-gallery
    matplotlib
